# Im-a-pro-2026-olympics

./: README.md  justfile  pyproject.toml  report.md
data/: demographics_dataset.csv  origin_dataset.csv  origin_questions.md
data/raw/: БАК 3. Социологический опрос населения Республики Мордовия.xlsx
src/: main.py  style.py
src/graphs/: graph1.py  graph10.py  graph11.py  graph12.py  graph2.py  graph3.py  graph4.py  graph5.py  graph6.py  graph7.py  graph8.py  graph9.py
src/scripts/: converter.py  debug_columns.py  debug_graph10.py  debug_graph5.py  debug_other_graph5.py  debug_values.py  demographics_converter.py  research.py  verify_channels_graph10.py  verify_graph12.py
